# authorstudio_UX_Site

./: .gitignore  ASSET_SYSTEM_IMPLEMENTATION.md  AUTHENTICATION_COMPLETE.md  CHAPTER_LOCAL_STORAGE_INTEGRATION_COMPLETE.md  CUSTOM_NODES_GUIDE.md  ENCRYPTED_DATA_INTEGRATION_SUMMARY.md  FOREIGN_KEY_FIX_COMPLETE.md  HTTP_PERMISSIONS_FIX.md  INTEGRATION_COMPLETE_SUMMARY.md  MACOS_SETUP.md  NARRATIVE_LAYOUT_README.md  PERMISSIONS_FIX_APPLIED.md  README.md  REVISION_MANAGEMENT_GUIDE.md  SELECTION_STYLING_GUIDE.md  URL_NAVIGATION_IMPLEMENTATION.md  WHISPER_SETUP.md  app-database-test.html  chapter-diagnostics.html  database-integration-test.html  database-validation-test.html  debug_launch.json  index.html  metadata.json  new_typography_component.tsx  package-lock.json  package.json  selection-test.html  tailwind.config.js  temp_compact_content.txt  test-cover-upload.html  test-session-commands.html  test-surrealdb.html  test_diagnostics.html  tsconfig.json  url-navigation-test.html  vite.config.ts  world-building-demo.html
docs/: AUTHENTICATION_COMPLETE.md  CHAPTER_PROGRESS_BAR_IMPLEMENTATION.md  DATABASE_RESET_COMPLETE.md  (+24 more)
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/models/: README.md
src-tauri/src/: app_surreal copy.rs  app_surreal.rs  app_surreal_working.rs  asset_commands.rs  audio_test_generator.rs  database.rs  lib.rs  simple_dictation.rs  surreal.rs  test_surreal.rs  test_surreal_new.rs  test_surreal_old.rs  tool_windows.rs  whisper_diagnostics.rs  whisper_dictation.rs  whisper_file_test.rs
(+203 files in other folders)
