[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.7.0", features = [] }
tauri-plugin-log = "2"
sysinfo = "0.30"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
once_cell = "1.19"
surrealdb = { version = "2.3.7", default-features = false, features = ["kv-rocksdb"] }
chrono = "0.4"

tauri-plugin-fs = "2.0"
tauri-plugin-http = "2.0"

# Asset system dependencies
sha2 = "0.10"
image = "0.24"
nanoid = "0.4"

# Real Whisper + CPAL dependencies for full AI functionality (latest versions)
whisper-rs = "0.14.4"
cpal = "0.15"
hound = "3.5"
futures = "0.3.31"

# macOS-specific optimizations (optional)
[target.'cfg(target_os = "macos")'.dependencies]
# Use system frameworks for better performance on macOS
objc = "0.2"

# Optional Windows-specific dependencies for simple dictation fallback (not used when whisper-rs is enabled)
# [target.'cfg(windows)'.dependencies]
# windows = { version = "0.54", features = [
#     "Win32_Media_Speech",
#     "Win32_System_Com",
# ] }
